--- a/book_outlet/templates/book_outlet/index.html
+++ b/book_outlet/templates/book_outlet/index.html
@@ -77,7 +77,7 @@
     </p>
     <p class="card-text">
       Average Rating: 
-      <span class="badge bg-success">{{ avg_rating.rating__avg }}</span>
+      <span class="badge bg-success">{{ avg_rating.rating__avg|floatformat:1 }}</span>
     </p>
   </div>
 </div>
